--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "Kuma",
+  "name": "Kuma Oracle",
   "version": "1.0",
   "description": "An official Kuma Capital extension. Kuma Oracle automatically evaluates the impact of real-world events on risk assets.",
   "background": {
